# Camera

./: CMakeLists.txt  Main.cpp
Source/: Main.cpp  VCamera.cpp  VCamera.h  VCudaEncoder.cpp  VCudaEncoder.h
Source/Camera/: VgCamera.cpp  VgCamera.h  VgVideo.cpp  VgVideo.h
