CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(TEGRACAMERA)

FIND_PACKAGE(OpenCV REQUIRED)

if(APPLE)
  set(CUDA_HOST_COMPILER /usr/bin/clang)
endif()
# Add CUDA Package

FIND_PACKAGE(CUDA REQUIRED)

CUDA_INCLUDE_DIRECTORIES(/Developer/NVIDIA/CUDA-6.5/include/)

INCLUDE_DIRECTORIES(
  ${CUDA_CUT_INCLUDE_DIR})

CUDA_ADD_EXECUTABLE(Camera
  Main.cpp
  Source/VCamera.cpp
  Source/VCudaEncoder.cpp)
	
TARGET_LINK_LIBRARIES(Camera
  ${OpenCV_LIBS}
  ${CUDA_LIBRARY})
