CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(TegraCompression)

FIND_PACKAGE(OpenCV REQUIRED)

FIND_PACKAGE(Boost COMPONENTS thread system)

INCLUDE_DIRECTORIES(
	${Boost_INCLUDE_DIRS})

ADD_EXECUTABLE(Camera
  Source/Main.cpp
	Source/Camera/VgCamera.cpp
	Source/Camera/VgVideo.cpp)

TARGET_LINK_LIBRARIES(Camera
	${OpenCV_LIBS}
	${Boost_THREAD_LIBRARY}
	${Boost_SYSTEM_LIBRARY})
